Use different email since decached.com is gone

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://decached.com/"
+baseURL = "https://decached.github.io/"
 languageCode = "en-us"
 title = "de-cached"
 theme = "konoha"
@@ -10,4 +10,4 @@ theme = "konoha"
     linkedin = "decached"
     twitter = "decached"
     stackoverflow = "users/1500692/akash-kothawale"
-    email = "io@decached.com"
+    email = "decached@gmail.com"
